# ee2project-2024-robot-power

./: .gitignore  CMakeLists.txt  Camera v2.stl  HOW TO TUNE  Initial ideas.md  Makefile  README.md  ed.cpp  install_opencv.sh  install_opencv.txt  log.md  main.cpp  marker_proxy.drawio  markerdict.drawio  overlay.drawio  overlay_class.drawio  sensor_head.20240619-151553.FCBak  sensor_head.FCStd  sensor_head.stl  square_overlay.drawio  test.c  ultrasonic_mount.stl
Briefing Documents/: balance-guide.md  requirements.odt
Interface/: interface.html  network_proc.py
Interface/Testing/: README.md  app.py  rover_control.py
Interface/Testing/templates/: interface.html
across-devices/arduino/: ardpiwire.cpp  ardpiwire.hpp  receiver_thread_instructions.cpp
across-devices/laptop/: backup_ui.py  network_proc copy.py  network_proc.py
across-devices/rpi/: ardpiwire.cpp  ardpiwire.hpp  ardpiwire.py  example_cv_write.cpp  network_bg_proc.cpp  network_bg_proc_obj.hpp  rpiwire_freq_data.txt
computerVision/: cvimageload.py  cvvideotest.py  cvwebcamtest.py  drawopencvtest1.py  image_test.py  sintest.py
computerVision/diagrams/: .$imageproc.drawio.bkp  imageproc.drawio
computerVision/helper_functions/: image_wr_helper.py
computer_vision/: cvvideotest.py  opencvlogo.py
computer_vision/ai/: datasetsandloaders.ipynb  transforms.ipynb
computer_vision/ai/.ipynb_checkpoints/: buildingnn-checkpoint.ipynb  torchtest-checkpoint.ipynb
computer_vision/ai/.virtual_documents/: Untitled.ipynb  datasetsandloaders.ipynb  tensors.ipynb
computer_vision/helper_functions/: helper_functions.py
computer_vision_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  appendix.md  appendix.txt  clear_markers.sh  cmake_install.cmake  ee2-computer-vision.cbp  marker  marker_dict  marker_gen.cpp  open-cv-ctest.cpp
computer_vision_cpp/doc/: marker_detect_old.cpp
computer_vision_cpp/include/: column_overlay.hpp  marker_dict.hpp  overlay.hpp  square_overlay.hpp
computer_vision_cpp/interim/: class_diagram_reader.drawio  control.drawio  dataflowdetector.drawio  depen.drawio
computer_vision_cpp/scripts/: appendix.sh  clear_binaries.sh  clear_markers.sh  convert_markers.sh  test.sh
computer_vision_cpp/src/: CMakeCache.txt  Makefile  cmake_install.cmake  colour_test.cpp  column_overlay.cpp  map_test.cpp  marker_detect.cpp  marker_detect_camera.cpp  marker_detect_rpi.cpp  marker_detection.cpp  marker_dict.cpp  marker_gen.cpp  open-cv-ctest.cpp  overlay.cpp  shared_mem.cpp  square_overlay.cpp  test_writing.cpp  webcam_test.cpp
computer_vision_py/: arithmetic_ops_img.py  dependancies.txt  requirements.txt
computer_vision_py/.virtual_documents/ai/: tensors.ipynb
computer_vision_py/ai/: buildingnn.ipynb  datasetsandloaders.ipynb  objdect.ipynb  tensors.ipynb  torchtest.ipynb
computer_vision_py/ai/.ipynb_checkpoints/: buildingnn-checkpoint.ipynb  datasetsandloaders-checkpoint.ipynb  objdect-checkpoint.ipynb  tensors-checkpoint.ipynb  transforms-checkpoint.ipynb
computer_vision_py/diagrams/: .$imageproc.drawio.bkp  imageproc.drawio
computer_vision_py/helper_functions/: helper_functions.py
computer_vision_py/images/: evidence.md
computer_vision_py/images/slideshow/: clear.sh
computer_vision_py/src/: cvimageload.py  cvwebcamtest.py  drawopencvtest1.py  image_test.py  marker_cam.py  obj_track_test.py  sintest.py
images/: cascaded.drawio  openloop.drawio  overlay_class.drawio
images_diagrams/: SquareOverlayNumbering.drawio  column_overlay.drawio  overlay.drawio
interim/: Untitled Diagram.drawio  class_diagram_reader.drawio  depen.drawio  opencv,drawio
meetings/: 200524Intro.md  220524Adgenda.md  220524Minutes.md  DFMEA worksheet - 2024 (2).xlsx  DFMEA worksheet - 2024.xlsx  sendtovault.sh
microcontroller code/: log.md
microcontroller code/ZC Code/: backup_ui.py  network_proc.py  var_getter.py  var_setter.py
microcontroller code/ZC Code/Python RPI/: backup_ui.py  network_proc.py  var_setter.py
microcontroller code/ZC Code/Python_RPI/: var_getter.py
microcontroller code/ZC Code/src/: ardpiwire.cpp  ardpiwire.hpp  main(Old)..txt  main..cpp  main..txt  main.cpp  new.cpp  new.txt  test.txt  ultrasound.cpp  ultrasound.hpp
microcontroller code/my code/src/: main.cpp
sensors/src/: sesnor_code.cpp  test.md
within-rpi/cpp/: shared_mem.hpp
within-rpi/python/: shared_mem.py
within-rpi/shell/: Hotspot.nmconnection  enable_hotspot.sh  enable_ssh.sh  fix_shm_perms.sh  install.sh  rc.local
